parent title spacing fix

--- a/core/src/Nav/Parent/Parent.less
+++ b/core/src/Nav/Parent/Parent.less
@@ -12,7 +12,7 @@
     background: darken(@nav-border-color, 7%);
     font-weight: bold;
     font-size: 1.2rem;
-    padding: 1rem 0;
+    padding: 1rem 1rem 1rem 0;
     letter-spacing: 1.5px;
   }
   ul {
